Add HTML sanitization and parser improvements
- Introduced `langName` parameter to constructor for full language name support
- Updated `SourceCode` property to use `StringBuilder` for efficient content accumulation
- Refined parsing logic to align with Markdig's `BlockParser` and `BlockProcessor` mechanisms
- 🛡️ Implemented XSS sanitization for HTML input and output, allowing only safe HTML5 tags

--- a/Markdig.Extensions.Xmdl.csproj
+++ b/Markdig.Extensions.Xmdl.csproj
@@ -37,6 +37,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="HtmlSanitizer" Version="9.0.876" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
 		<PackageReference Include="Markdig" Version="0.40.0" ExcludeAssets="runtime">
 			<Private>false</Private>
